# copenai

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  docker.yml  e2e.yml
crates/copenai-acp/: Cargo.toml
crates/copenai-acp/src/: backend.rs  handlers.rs  lib.rs  mock.rs  prompt.rs  resume.rs  supervisor.rs  worker.rs
crates/copenai-cli/: Cargo.toml
crates/copenai-cli/src/: main.rs
crates/copenai-core/: Cargo.toml
crates/copenai-core/src/: config.rs  cursor.rs  daemon.rs  error.rs  lib.rs  paths.rs
crates/copenai-e2e/: Cargo.toml
crates/copenai-e2e/src/: harness.rs  lib.rs  main.rs
crates/copenai-e2e/tests/: scenarios.rs
crates/copenai-openai/: Cargo.toml
crates/copenai-openai/src/: conversation.rs  files.rs  lib.rs  messages.rs  model.rs  multimodal.rs  sse.rs  types.rs
crates/copenai-openai/src/responses/: input.rs  mod.rs  output.rs  parser.rs  request.rs  response.rs  sse.rs
crates/copenai-openai/src/tools/: choice.rs  detect.rs  function_tool.rs  mod.rs  parse_chat.rs  prompt.rs  validate.rs
crates/copenai-server/: Cargo.toml
crates/copenai-server/src/: daemon.rs  lib.rs  routes.rs  state.rs  test_support.rs
crates/copenai-server/src/responses/: mod.rs  orchestrator.rs  ws.rs
crates/copenai-server/src/tools/: mod.rs  mode.rs  orchestrate.rs  tool_loop.rs
crates/copenai-server/tests/: chat_mock.rs  responses_mock.rs
crates/copenai-store/: Cargo.toml
crates/copenai-store/migrations/: 001_init.sql  002_permissions.sql  003_responses.sql  004_response_input_chain.sql
crates/copenai-store/src/: api_keys.rs  conversations.rs  lib.rs  permissions.rs  responses.rs  store.rs
k8s/: bootstrap-login.sh  deployment-login.yaml  deployment.yaml  secret.example.yaml
