[package]
name = "copenai-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-utils = []

[dependencies]
agent-client-protocol.workspace = true
async-trait = "0.1"
anyhow.workspace = true
async-stream.workspace = true
chrono.workspace = true
copenai-core.workspace = true
copenai-openai.workspace = true
copenai-store.workspace = true
futures.workspace = true
base64.workspace = true
mime_guess.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
