[package]
name = "copenai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "copenai"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
copenai-acp.workspace = true
copenai-core.workspace = true
copenai-server.workspace = true
copenai-store.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
