[package]
name = "copenai-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "copenai-e2e"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
copenai-core.workspace = true
copenai-server.workspace = true
copenai-store.workspace = true
axum.workspace = true
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
copenai-e2e = { path = ".", package = "copenai-e2e" }
copenai-acp = { workspace = true, features = ["test-utils"] }
