[package]
name = "copenai-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-utils = ["dep:tempfile"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
copenai-acp.workspace = true
copenai-core.workspace = true
copenai-openai.workspace = true
copenai-store.workspace = true
futures.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest.workspace = true
tempfile = { workspace = true, optional = true }

[[test]]
name = "chat_mock"
required-features = ["test-utils"]

[dev-dependencies]
copenai-acp = { workspace = true, features = ["test-utils"] }
http-body-util = "0.1"
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
