[package]
name = "copenai-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bcrypt.workspace = true
chrono.workspace = true
copenai-core.workspace = true
rand.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
